# python-sdk

./: README.md  pyproject.toml
payzcore/: __init__.py  client.py  errors.py  types.py  webhook.py
payzcore/resources/: __init__.py  payments.py  projects.py
